# ansible-infrastructure

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  README-VAULT.md  README.md  ansible.cfg  build-requirements.txt  collection-requirements.yaml  infrastructure-realm-requirements.yaml  inventory.yaml  inventory.yml  namespace-blob.yml  parameters-im-main-eks-staging.vault  parameters-im-main-eks-sygnature.vault  parameters-im-main-eks-sygnature2.vault  parameters-im-main-eks.vault  parameters-im-main.vault  parameters-local.yaml  parameters-nw-xch-developer-integration-test.vault  parameters-nw-xch-developer-test.vault  parameters-nw-xch-developer.vault  parameters-nw-xch-dummy.vault  parameters-nw-xch-production.vault  parameters-scw-im-main-staging.yaml  parameters-scw-im-main.yaml  parameters-scw-production.yaml  parameters-xch-developer-integration-test.vault  parameters-xch-developer-test.vault  parameters-xch-developer-upgrade.vault  parameters-xch-developer.vault  parameters-xch-production.vault  parameters-xch-scratch.vault  parameters.template  pyproject.toml  requirements.txt  requirements.yaml  role-requirements.yaml  role-requirements.yml  (+28 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: lint.yaml
doc/: architecture.rst  conf.py  creating-the-infrastructure.rst  deleting-the-infrastructure.rst  getting-started.rst  index.rst  labels-and-affinities.rst  related-material.rst
doc/_static/: README.md
doc/advanced/: awx.rst
group_vars/: rancher.yaml
host_vars/: localhost.yaml
provisioning/: README.md
provisioning/eksctl/: README.md  cluster.yaml
provisioning/ingress-controller/: ingress-nginx-1.4.0.yaml  ingress-nginx-2.9.1.yaml
provisioning/rke-aws/: README.md  aws-rke-cluster.yaml  aws-rke-prep.sh
roles/core/defaults/: main.yaml  main.yml
roles/core/files/: pc-im.yaml
roles/core/tasks/: deploy-priorityclasses.yaml  deploy.yaml  deploy.yml  main.yaml  main.yml  undeploy-priorityclasses.yaml  undeploy.yaml  undeploy.yml
roles/core/templates/: clusterissuer-production.yaml.j2  clusterissuer-staging.yaml.j2  pc-im.yaml.j2  (+2 more)
(+197 files in other folders)
