[tool.poetry]
name = "ansible-infrastructure"
version = "2023.1"
description = "Ansible roles to deploy Informatics Matters infrastructure components to Kubernetes"
authors = ["Alan Christie <achristie@informaticsmatters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
ansible = "8.5.0"
kubernetes = "23.6.0"
jmespath = "1.0.1"

[tool.poetry.group.dev.dependencies]
ansible-lint = "5.*"
pre-commit = "3.3.*"
yamllint = "1.*"

[tool.poetry.group.doc.dependencies]
sphinx = "5.*"
sphinx_rtd_theme = "1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
