[tool.poetry]
name = "ansible-infrastructure"
version = "2023.1"
package-mode = false
description = "Ansible roles to deploy Informatics Matters infrastructure components to Kubernetes"
authors = ["Alan Christie <achristie@informaticsmatters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
ansible = "^10.0.1"
kubernetes = "^31.0.0"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }
pre-commit = "^3.7.1"
yamllint = "^1.35.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
